# Simple-web-server

./: .gitignore  README.md  simple-server.cabal  simple-web-server.cabal
db/: README.md
src/: Database.hs  Main.hs  Types.hs  test-mysql.hs
