name:          simple-web-server
version:       0.1.0
synopsis:      A simple web server
author:        Jie Liu
maintainer:    Jie Liu <liujie333333@gmail.com>
copyright:     (c) Jimmy Tinsley
license:       Aapche
license-file:  LICENSE
category:      Web
build-type:    Simple
cabal-version: >= 1.10
description:   A simple web server

flag static
    Description: Enable static linking
    Default:     False

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs

    exposed-modules:
          Types
          Database
          Main

    build-depends:
          aeson                 >= 0.6
        , base                  >= 4.6    && < 5.0
        , bytestring            >= 0.10
        , directory             >= 1.3.0.0
        , HDBC                  >= 2.4.0.0
        , HDBC-sqlite3          >= 2.3.0.0
        , text                  >= 0.11
        , wai                   >= 3.0
        , warp                  >= 3.0
        , wai-util              >= 0.7
        , http-types            >= 0.10

executable server
    main-is:          src/Main.hs
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -fwarn-tabs -threaded -rtsopts -with-rtsopts=-T
    build-depends:    aeson, base, bytestring, directory, http-types, simple-web-server, wai, warp
    if flag(static)
        ld-options: -static